--- a/src/components/body.css
+++ b/src/components/body.css
@@ -41,10 +41,20 @@
   border-color: black;
 }
 
-.shadedBoxes:hover {
-  border: blue 2px;
+.upperBoxes {
+  width: 287.61px;
+  height: 336.17px;
+  background: #c4c4c4;
+  margin: 20px 0 20px 20px;
+  flex: none;
+  border: blue 1px;
 }
-
+.flexible:hover {
+  border: 2px solid rgb(32, 115, 240);
+}
+.upperBoxes:hover {
+  border: 2px solid rgb(32, 115, 240);
+}
 .circleBox {
   width: 287.61px;
   height: 336.17px;
@@ -52,11 +62,12 @@
   margin: 20px 0 20px 20px;
   flex: none;
 }
+.circleBox:hover {
+  border: 2px solid rgb(32, 115, 240);
+}
 
 .circle:hover {
-  border: 2px;
-  border-color: blue;
-  box-shadow: 2px 0px 10px rgb(119, 119, 243);
+  border: 2px solid rgb(32, 115, 240);
 }
 
 .btnStyle {
